--- a/index.html
+++ b/index.html
@@ -152,7 +152,15 @@ if (e.keyCode == '37') {
 plusSlides(-1);
 player.api("pause");
 }
+if (e.keyCode == '38') {
+plusSlides(-1);
+player.api("pause");
+}
 else if (e.keyCode == '39') {
+plusSlides(1);
+player.api("pause");
+}
+else if (e.keyCode == '40') {
 plusSlides(1);
 player.api("pause");
 }
